--- a/Mirai/Mirai.csproj
+++ b/Mirai/Mirai.csproj
@@ -124,7 +124,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Audio\SpeechEnginePool.cs" />
+    <Compile Include="Audio\SpeechEngine.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="Audio\Commands.cs" />
     <Compile Include="Audio\Connection.cs" />
@@ -135,6 +135,7 @@
     <Compile Include="Conversation\Commands.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Management\Commands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ranks.cs" />
