--- a/Mirai/packages.config
+++ b/Mirai/packages.config
@@ -4,6 +4,7 @@
   <package id="Google.Apis.Auth" version="1.24.1" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.24.1" targetFramework="net461" />
   <package id="Google.Apis.YouTube.v3" version="1.24.1.760" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
