--- a/Mirai/Mirai.csproj
+++ b/Mirai/Mirai.csproj
@@ -140,7 +140,7 @@
     <Compile Include="Management\Commands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ranks.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
