--- a/Mirai/App.config
+++ b/Mirai/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="DiscordToken" value="MTczNzM0NjY3MjkwMjc5OTM2.Cf-Vew.KXzRYYUt6i2hXBAKhm1MM0hmcyk"/>
+    <add key="DiscordChannel" value="74785335908773888"/>
+    <add key="YouTubeToken" value="AIzaSyAVrXiAHfLEbQbNJP80zbTuW2jL0wuEigQ"/>
+    <add key="SoundCloudToken" value="5c28ed4e5aef8098723bcd665d09041d"/>
+  </appSettings>
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
