Fix for switching channels

--- a/Mirai/App.config
+++ b/Mirai/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Token" value="MTczNzM0NjY3MjkwMjc5OTM2.Cf-Vew.KXzRYYUt6i2hXBAKhm1MM0hmcyk" />
+    <add key="Token" value="MTczNzM0NjY3MjkwMjc5OTM2.DAeabg.MJuNahzhoFMqhHdAcLpMnX4lO98" />
     <add key="Channel" value="74785335908773888" />
     <add key="Owner" value="74779725393825792" />
     <add key="Trigger" value="music player" />
