--- a/Mirai/App.config
+++ b/Mirai/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Token" value="" />
-    <add key="Channel" value="74785335908773888" />
+    <add key="Channel" value="202044426191765504" />
     <add key="Owner" value="74779725393825792" />
     <add key="Trigger" value="music player" />
     <add key="YouTube" value="AIzaSyAVrXiAHfLEbQbNJP80zbTuW2jL0wuEigQ" />
@@ -64,6 +64,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
