--- a/Mirai/packages.config
+++ b/Mirai/packages.config
@@ -1,25 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Discord.Net.Core" version="1.0.2" targetFramework="net461" />
+  <package id="Discord.Net.Rest" version="1.0.2" targetFramework="net461" />
+  <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net461" />
+  <package id="Google.Apis" version="1.31.0-beta01" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.31.0-beta01" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.31.0-beta01" targetFramework="net461" />
+  <package id="Google.Apis.YouTube.v3" version="1.30.0.1035" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.4.0-preview1-25305-02" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0-preview2-25330-01" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.WebSockets.Client" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.4.0-preview1-25305-02" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net461" />
 </packages>
