--- a/Mirai/App.config
+++ b/Mirai/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Token" value="" />
-    <add key="Channel" value="202044426191765504" />
+    <add key="Token" value="MTc0MTM4MjIwNTM4MzYzOTA1.DAteOQ.yBSUKd_7yi3SARKUzA5mLvnIp0o" />
+    <add key="Channel" value="202044426191765504" /> <!-- 382537497701384211 -->
     <add key="Owner" value="74779725393825792" />
     <add key="Trigger" value="music player" />
     <add key="YouTube" value="AIzaSyAVrXiAHfLEbQbNJP80zbTuW2jL0wuEigQ" />
@@ -43,7 +43,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -68,6 +68,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.31.0.0" newVersion="1.31.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.31.0.0" newVersion="1.31.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
